--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+env_logger = "0.11.8"
+hostname = "0.4.2"
+log = "0.4.29"
+mpris = "2.0.1"
+rumqttc = "0.25.1"
+tokio = { version = "1.48.0", features = ["full"] }
+zbus = "5.12.0"
